crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__associative_subscription_event_tool_interruption.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.into_inner()
---
[
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "run command"
    }
  },
  {
    "kind": "tool_call",
    "call": {
      "id": "tc-cmd",
      "function": {
        "name": "execute_command",
        "arguments": {
          "command": "make build"
        }
      }
    }
  },
  {
    "kind": "tool_result",
    "result": {
      "id": "tc-cmd",
      "content": [
        {
          "type": "text",
          "text": "Tool call interrupted by user"
        }
      ]
    }
  },
  {
    "kind": "subscription_event",
    "result": {
      "id": "[uuid]",
      "content": [
        {
          "type": "text",
          "text": "build output chunk\n[exit code: 0]"
        }
      ]
    },
    "tool_call_id": "tc-cmd",
    "invocation": {
      "id": "[uuid]",
      "function": {
        "name": "receive_event__injected",
        "arguments": {
          "original_args": {
            "command": "make build"
          },
          "original_tool_call_id": "tc-cmd",
          "original_tool_name": "execute_command"
        }
      }
    }
  }
]
