crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__consecutive_text_chunks_are_coalesced-2.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.borrow().clone()
---
[
  {
    "kind": "assistant",
    "content": {
      "text": "Hello, world"
    }
  }
]
