crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__consecutive_text_chunks_are_coalesced.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.pending_items.borrow().clone()
---
[
  {
    "message": {
      "kind": "assistant",
      "content": {
        "text": "Hello, world"
      }
    },
    "message_id": "c-1"
  }
]
