crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__duplicate_message_returns_handled.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history
---
[
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "hello"
      }
    ]
  }
]
