crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__metadata_is_updated_before_processing.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.get_metadata()
---
{
  "user_id": "u-123"
}
