crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__oauth_required_returns_auth_url.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: result
---
{
  "OAuthRequired": {
    "auth_url": "https://example.com/auth"
  }
}
