crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__simple_user_message_on_empty_history.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.into_inner()
---
[
  {
    "kind": "user",
    "content": {
      "type": "text",
      "text": "hello"
    }
  }
]
