crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__subscription_event_tool_interruption.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history
---
[
  {
    "role": "user",
    "content": [
      {
        "type": "text",
        "text": "subscribe"
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "id": "tc-sub",
        "call_id": null,
        "function": {
          "name": "subscribe_tool",
          "arguments": {
            "topic": "events"
          }
        },
        "signature": null,
        "additional_params": null
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "toolresult",
        "id": "tc-sub",
        "content": [
          {
            "type": "text",
            "text": "Tool call interrupted by user"
          }
        ]
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "id": "[uuid]",
        "call_id": null,
        "function": {
          "name": "receive_event__injected",
          "arguments": {
            "original_args": {
              "topic": "events"
            },
            "original_tool_call_id": "tc-sub",
            "original_tool_name": "subscribe_tool"
          }
        },
        "signature": null,
        "additional_params": null
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "toolresult",
        "id": "[uuid]",
        "content": [
          {
            "type": "text",
            "text": "event payload"
          }
        ]
      }
    ]
  },
  {
    "role": "assistant",
    "id": null,
    "content": [
      {
        "id": "[uuid]",
        "call_id": null,
        "function": {
          "name": "spawn_thread",
          "arguments": {
            "instructions": "Process the single subscription event above, report to the parent if appropriate, then close the thread after processing this event. Only your report will be visible to the parent."
          }
        },
        "signature": null,
        "additional_params": null
      }
    ]
  },
  {
    "role": "user",
    "content": [
      {
        "type": "toolresult",
        "id": "[uuid]",
        "content": [
          {
            "type": "text",
            "text": "You are now INSIDE the thread for processing the single event above. Your thread ID is sub-thread-1, the parent which is still subscribing is thread-1."
          }
        ]
      }
    ]
  }
]
