crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__text_chunks_not_coalesced_across_non_text_item-2.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.history.borrow().clone()
---
[
  {
    "kind": "assistant",
    "content": {
      "text": "before"
    }
  },
  {
    "kind": "tool_call",
    "call": {
      "id": "tc-1",
      "function": {
        "name": "some_tool",
        "arguments": {}
      }
    }
  },
  {
    "kind": "assistant",
    "content": {
      "text": "after"
    }
  }
]
