crates/infinity-agent-core/src/snapshots/infinity_agent_core__event_processor__tests__text_chunks_not_coalesced_across_non_text_item.snap
---
source: crates/infinity-agent-core/src/event_processor.rs
expression: hm.pending_items.borrow().clone()
---
[
  {
    "message": {
      "kind": "assistant",
      "content": {
        "text": "before"
      }
    },
    "message_id": "c-1"
  },
  {
    "message": {
      "kind": "tool_call",
      "call": {
        "id": "tc-1",
        "function": {
          "name": "some_tool",
          "arguments": {}
        }
      }
    },
    "message_id": "c-2"
  },
  {
    "message": {
      "kind": "assistant",
      "content": {
        "text": "after"
      }
    },
    "message_id": "c-3"
  }
]
